# pr2_fingertip_sensors

./: .gitignore  CMakeLists.txt  README.md  UART_receive.ino  package.xml
CubeIDE/: .gitignore
CubeIDE/Arduino_Nano_PR2_slave/: Arduino_Nano_PR2_slave.ino
CubeIDE/G491RE_SPH_makabe/: .gitignore  .project  G491RE_SPH_makabe.ioc
CubeIDE/G491RE_SPH_makabe/Core/Inc/: FreeRTOSConfig.h
CubeIDE/G491RE_SPH_makabe/Core/Src/: main.c
CubeIDE/I2C_samples/M5_I2C_master/: M5_I2C_master.ino
CubeIDE/I2C_samples/Nucleo_G491RE_I2C_master/: .project  Nucleo_G491RE_I2C_master.ioc
CubeIDE/I2C_samples/Nucleo_G491RE_I2C_slave/: Nucleo_G491RE_I2C_slave.ioc
CubeIDE/I2C_samples/Nucleo_G491RE_I2C_slave_DMA/: .project  Nucleo_G491RE_I2C_slave_DMA.ioc
CubeIDE/I2C_samples/STM32_G491_I2C_slave/: .project  STM32G491CCUX_RAM.ld  STM32_G491_I2C_slave.ioc
CubeIDE/I2C_samples/STM32_G491_I2C_slave_DMA/: .project  STM32_G491_I2C_slave_DMA.ioc
CubeIDE/KJS-03/: .gitignore  .project  KJS-03.ioc
CubeIDE/KJS-03/Core/Inc/: FreeRTOSConfig.h  ics.h
CubeIDE/KJS-03/Core/Src/: ics.c  main.c  stm32f4xx_hal_timebase_tim.c
CubeIDE/Nucleo_G491RE/: .gitignore  .project  Nucleo_G491RE.ioc  STM32G491RETX_RAM.ld
CubeIDE/Nucleo_G491RE/Core/Inc/: FreeRTOSConfig.h  main.h  sensor.h
CubeIDE/Nucleo_G491RE/Core/Src/: main.c  sensor.c
CubeIDE/Nucleo_G491RE_DMA/: .gitignore  .project  Nucleo_G491RE_DMA.ioc
CubeIDE/Nucleo_G491RE_DMA/Core/Inc/: main.h  sensor.h
CubeIDE/Nucleo_G491RE_DMA/Core/Src/: main.c  sensor.c  stm32g4xx_hal_timebase_tim.c
CubeIDE/Nucleo_G491RE_I2C_samples/: README.md
CubeIDE/Nucleo_G491RE_I2C_samples/Nucleo_G491RE_I2C_slave/: .project  Nucleo_G491RE_I2C_slave.ioc
CubeIDE/Nucleo_G491RE_PR2_slave/: .gitignore  .project  Nucleo_G491RE_PR2_slave.ioc
CubeIDE/Nucleo_G491RE_PR2_slave/Core/Src/: main.c
CubeIDE/Nucleo_G491RE_SPH0645LM4H/: .gitignore  .project  Nucleo_G491RE_SPH0645LM4H.ioc  Nucleo_G491RE_SPH0645LM4H_with_PR2_Slave Debug.launch  Nucleo_G491RE_SPH0645LM4H_with_PR2_Slave.ioc
CubeIDE/Nucleo_G491RE_SPH0645LM4H/Core/Inc/: FreeRTOSConfig.h  main.h
CubeIDE/Nucleo_G491RE_SPH0645LM4H/Core/Src/: main.c
CubeIDE/Nucleo_G491RE_SPH0645LM4H_with_PR2_Slave/: .gitignore  Nucleo_G491RE_SPH0645LM4H_with_PR2_Slave Debug.launch  Nucleo_G491RE_SPH0645LM4H_with_PR2_Slave.ioc
CubeIDE/Nucleo_G491RE_SPH0645LM4H_with_PR2_Slave/Core/Src/: app_freertos.c  main.c
CubeIDE/Nucleo_G491RE_VCNL4040/: .gitignore  .project  Nucleo_G491RE_VCNL4040.ioc
CubeIDE/Nucleo_L412/: .gitignore  .project  Nucleo_L412.ioc
CubeIDE/PFS-01/: .gitignore  .project  PFS-01.ioc
CubeIDE/PFS-01/Core/Inc/: main.h  (+2 more)
CubeIDE/g491_makabe/: .gitignore  g491_makabe.ioc
arduino_libraries/: pfs.h  pfs_ros.h
config/: pfs.rviz
data/: pfs_params.yaml
g491_makabe/: .cproject  .mxproject  .project  STM32G491RETX_FLASH.ld  g491_makabe Debug.launch  g491_makabe.ioc
g491_makabe/Core/Inc/: stm32g4xx_hal_conf.h  stm32g4xx_it.h
g491_makabe/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
g491_makabe/Debug/: g491_makabe.elf  g491_makabe.list  g491_makabe.map  makefile  objects.list  sources.mk
launch/: calibrate_pfs.launch  dummpy_pr2.launch  pfs.launch  pfs_a_to_sensor_transform_publisher.launch  pfs_b_to_sensor_transform_publisher.launch  pfs_to_sensor_transform_publisher.launch  pfs_transform_publisher.launch  rosbag_play.launch  rosbag_record.launch  rqt_plot_force.launch  rqt_plot_proximity.launch
msg/: PR2FingertipSensor.msg
python/pr2_fingertip_sensors/: __init__.py  pfs.py
sample/: sample_pfs.launch
scripts/: README.md  calibrate_pfs.py  convert_pfs.py  parse_pfs.py  parse_pr2.py  parse_serial.py  serial_test.py  symlink_arduino_libraries.sh
sketches/: README.md
sketches/publish_PFS/: pfs.h  publish_PFS.ino
sketches/publish_PFS_with_I2C/: publish_PFS_with_I2C.ino
sketches/publish_PFS_with_UART/: publish_PFS_with_UART.ino
sketches/receive_I2C/: receive_I2C.ino
sketches/receive_PFS/: receive_PFS.ino
sketches/receive_UART/: pfs.h  receive_UART.ino
(+54 files in other folders)
