<package format="3">
  <name>pr2_fingertip_sensors</name>
  <version>0.0.1</version>
  <description>Create an original sensor board to replace PR2 regular tactile sensors.</description>

  <maintainer email="yamaguchi@jsk.imi.i.u-tokyo.ac.jp">Naoya Yamaguchi</maintainer>
  <maintainer email="makabe@jsk.imi.i.u-tokyo.ac.jp">Tasuku Makabe</maintainer>

  <author email="yamaguchi@jsk.imi.i.u-tokyo.ac.jp">Naoya Yamaguchi</author>
  <author email="makabe@jsk.imi.i.u-tokyo.ac.jp">Tasuku Makabe</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>pr2_msgs</exec_depend>

</package>
