<package format="3">
  <name>pr2_fingertip_sensors</name>
  <version>0.0.1</version>
  <description>Create an original sensor board to replace PR2 regular tactile sensors.</description>

  <maintainer email="yamaguchi@jsk.imi.i.u-tokyo.ac.jp">Naoya Yamaguchi</maintainer>
  <maintainer email="makabe@jsk.imi.i.u-tokyo.ac.jp">Tasuku Makabe</maintainer>

  <author email="yamaguchi@jsk.imi.i.u-tokyo.ac.jp">Naoya Yamaguchi</author>
  <author email="makabe@jsk.imi.i.u-tokyo.ac.jp">Tasuku Makabe</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pr2_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-serial</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-six</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-serial</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-six</exec_depend>

</package>
